--- a/cello2/cello2-dnacompiler/src/non-packaged-resources/Configuration.json
+++ b/cello2/cello2-dnacompiler/src/non-packaged-resources/Configuration.json
@@ -9,7 +9,7 @@
             "name": "partitioning"
         },
         {
-            "algorithm_name": "SimulatedAnnealing",
+            "algorithm_name": "RandomYeast",
             "name": "technologyMapping"
         },
         {
