--- a/cello2/cello2-partitioning/pom.xml
+++ b/cello2/cello2-partitioning/pom.xml
@@ -7,13 +7,16 @@
     <groupId>org.cellocad</groupId>
     <artifactId>cello2-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-  </parent> 
+  </parent>
   <artifactId>cello2-partitioning</artifactId>
+  <properties>
+    <stage.name>partitioning</stage.name>
+  </properties>
   <repositories>
     <repository>
       <id>project.local</id>
       <name>project</name>
-      <url>file:${project.basedir}/lib</url>
+      <url>file:${project.basedir}${file.separator}lib</url>
     </repository>
   </repositories>
   <dependencies>
@@ -36,7 +39,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>partitioning.runtime.Main</mainClass>
+              <mainClass>org.cellocad.cello2.${stage.name}.runtime.Main</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
@@ -73,11 +76,51 @@
                   <classifier>jar-with-dependencies</classifier>
                 </artifactItem>
               </artifactItems>
-              <outputDirectory>../target</outputDirectory>
+              <outputDirectory>..${file.separator}target</outputDirectory>
             </configuration>
           </execution>
         </executions>
-      </plugin>      
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>install</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>..${file.separator}target${file.separator}resources-${stage.name}</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src${file.separator}non-packaged-resources</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <id>set-executable-permissions</id>
+	    <phase>install</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}SUGARM${file.separator}Linux${file.separator}minisat" perm="755" />
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
