--- a/cello2/cello2-logicsynthesis/pom.xml
+++ b/cello2/cello2-logicsynthesis/pom.xml
@@ -9,6 +9,9 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent> 
   <artifactId>cello2-logicsynthesis</artifactId>
+  <properties>
+    <stage.name>logicSynthesis</stage.name>
+  </properties>
   <repositories>
     <repository>
       <id>project.local</id>
@@ -66,25 +69,6 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <!-- <plugin> -->
-      <!--   <artifactId>maven-antrun-plugin</artifactId> -->
-      <!--   <version>1.7</version> -->
-      <!--   <executions> -->
-      <!--     <execution> -->
-      <!--       <id>process-test-classes</id> -->
-      <!--       <phase>process-test-classes</phase> -->
-      <!--       <goals> -->
-      <!--         <goal>run</goal> -->
-      <!--       </goals> -->
-      <!--       <configuration> -->
-      <!--         <target> -->
-      <!--           <chmod file="target${file.separator}classes${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Linux${file.separator}yosys" perm="755" /> -->
-      <!--           <chmod file="target${file.separator}classes${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Linux${file.separator}yosys-abc" perm="755" /> -->
-      <!--         </target> -->
-      <!--       </configuration> -->
-      <!--     </execution> -->
-      <!--   </executions> -->
-      <!-- </plugin> -->
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
 	<version>3.1.0</version>
@@ -128,11 +112,52 @@
                   <classifier>jar-with-dependencies</classifier>
                 </artifactItem>
               </artifactItems>
-              <outputDirectory>../target</outputDirectory>
+              <outputDirectory>..${file.separator}target</outputDirectory>
             </configuration>
           </execution>
         </executions>
-      </plugin>      
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>..${file.separator}target${file.separator}resources-${stage.name}</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src${file.separator}non-packaged-resources</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <id>set-executable-permissions</id>
+	    <phase>install</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Linux${file.separator}yosys" perm="755" />
+                <chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Linux${file.separator}yosys-abc" perm="755" />
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
