--- a/cello2/cello2-export/pom.xml
+++ b/cello2/cello2-export/pom.xml
@@ -118,7 +118,7 @@
               <resources>
                 <resource>
                   <directory>src${file.separator}non-packaged-resources</directory>
-                  <filtering>true</filtering>
+                  <filtering>false</filtering>
                 </resource>
               </resources>
             </configuration>
