--- a/cello2/cello2-logicsynthesis/pom.xml
+++ b/cello2/cello2-logicsynthesis/pom.xml
@@ -132,7 +132,7 @@
               <resources>
                 <resource>
                   <directory>src${file.separator}non-packaged-resources</directory>
-                  <filtering>true</filtering>
+                  <filtering>false</filtering>
                 </resource>
               </resources>
             </configuration>
@@ -141,7 +141,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.7</version>
+        <version>1.8</version>
         <executions>
           <execution>
             <id>set-executable-permissions</id>
