--- a/cello2/cello2-dnacompiler/pom.xml
+++ b/cello2/cello2-dnacompiler/pom.xml
@@ -123,7 +123,7 @@
               <resources>
 		<resource>
 		  <directory>src${file.separator}non-packaged-resources</directory>
-		  <filtering>true</filtering>
+		  <filtering>false</filtering>
 		</resource>
               </resources>
             </configuration>
