--- a/cello2/cello2-logicsynthesis/pom.xml
+++ b/cello2/cello2-logicsynthesis/pom.xml
@@ -153,6 +153,8 @@
               <target>
                 <chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Linux${file.separator}yosys" perm="755" />
                 <chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Linux${file.separator}yosys-abc" perm="755" />
+		<chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Mac${file.separator}yosys" perm="755" />
+                <chmod file="..${file.separator}target${file.separator}resources-${stage.name}${file.separator}executable${file.separator}applications${file.separator}Yosys${file.separator}Mac${file.separator}yosys-abc" perm="755" />
               </target>
             </configuration>
           </execution>
