--- a/cello2/cello2-placing/pom.xml
+++ b/cello2/cello2-placing/pom.xml
@@ -29,7 +29,7 @@
       <groupId>org.cidarlab</groupId>
       <artifactId>eugene</artifactId>
       <version>2.0.2-SNAPSHOT</version>
-      <classifier>jar-with-dependencies</classifier>
+<!--       <classifier>jar-with-dependencies</classifier> -->
       <!-- <exclusions> -->
       <!--   <exclusion> -->
       <!--     <groupId>org.slf4j</groupId> -->
