--- a/cello2/cello2-dnacompiler/src/main/resources/Configuration.json
+++ b/cello2/cello2-dnacompiler/src/main/resources/Configuration.json
@@ -5,7 +5,7 @@
             "name": "logicSynthesis"
         },
         {
-            "algorithm_name": "GPCC_SUGARM_BASE",
+            "algorithm_name": "HMetis",
             "name": "partitioning"
         },
         {
