--- a/cello2/cello2-placing/pom.xml
+++ b/cello2/cello2-placing/pom.xml
@@ -47,6 +47,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+      <groupId>org.logicng</groupId>
+  	  <artifactId>logicng</artifactId>
+  	  <version>1.6.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
