--- a/cello2/cello2-logicsynthesis/pom.xml
+++ b/cello2/cello2-logicsynthesis/pom.xml
@@ -31,6 +31,11 @@
       <version>0.5.2</version>
     </dependency>
     <dependency>
+      <groupId>org.cellocad</groupId>
+      <artifactId>netsynth</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
@@ -41,7 +46,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-	<version>3.1.0</version>
+        <version>3.1.0</version>
         <configuration>
           <archive>
             <manifest>
