--- a/cello2/cello2-common/pom.xml
+++ b/cello2/cello2-common/pom.xml
@@ -19,6 +19,11 @@
       <version>1.4</version>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
       <version>1.5</version>
