--- a/cello2/cello2-logicsynthesis/pom.xml
+++ b/cello2/cello2-logicsynthesis/pom.xml
@@ -32,8 +32,8 @@
     </dependency>
     <dependency>
       <groupId>org.cellocad</groupId>
-      <artifactId>netsynth</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>NetSynth</artifactId>
+      <version>1.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
