--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ os:
   - linux
   - osx
 osx_image: xcode9.3
+dist: trusty
 language: java
 jdk:
   - oraclejdk8
 before_install:
-  - cd cello2/
+  - cd cello/
