Ubuntu multiarch setup for travis.
NetSynthUtils copies a 32-bit abc binary for NetSynth. The binary is unusable in the trusty image without additional packages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ jdk:
   - oraclejdk8
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; brew install graphviz yosys; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:saltmakrell/ppa -y; sudo apt-get update; sudo apt-get -y install graphviz yosys; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:saltmakrell/ppa -y; sudo apt-get update; sudo apt-get -y install graphviz yosys; sudo dpkg --add-architecture i386; sudo apt-get update; sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386; fi
   - cd cello/
