--- a/cello/cello-common/pom.xml
+++ b/cello/cello-common/pom.xml
@@ -58,6 +58,11 @@
       <artifactId>log4j-core</artifactId>
       <version>2.11.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.logicng</groupId>
+      <artifactId>logicng</artifactId>
+      <version>1.6.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
