--- a/cello/cello-common/pom.xml
+++ b/cello/cello-common/pom.xml
@@ -63,5 +63,10 @@
       <artifactId>logicng</artifactId>
       <version>1.6.1</version>
     </dependency>
+	<dependency>
+      <groupId>org.mariuszgromada.math</groupId>
+      <artifactId>MathParser.org-mXparser</artifactId>
+      <version>4.4.2</version>
+	</dependency>
   </dependencies>
 </project>
