--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ dist: trusty
 language: java
 jdk:
   - oraclejdk8
+services:
+  - docker
 addons:
   homebrew:
     packages:
@@ -19,3 +21,6 @@ addons:
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo add-apt-repository ppa:saltmakrell/ppa -y; sudo apt-get update; sudo apt-get -y install graphviz yosys; sudo dpkg --add-architecture i386; sudo apt-get update; sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386; fi
   - cd cello/
+after_success:
+  - cd cello-dnacompiler/
+  - if [ "$TRAVIS_OS_NAME" = "linux" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$DOCKER_USERNAME" != "" ] && [ "$DOCKER_PASSWORD" != "" ]; then mvn docker:build && echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && mvn docker:push; fi
