--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -Dgpg.skip=true
 after_success:
   - cd cello-dnacompiler/
-  - if [ "$TRAVIS_OS_NAME" = "linux" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$DOCKER_USERNAME" != "" ] && [ "$DOCKER_PASSWORD" != "" ]; then mvn docker:build -Ddocker.showLogs=false && echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && mvn docker:push -Ddocker.showLogs=false; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$DOCKER_USERNAME" != "" ] && [ "$DOCKER_PASSWORD" != "" ]; then mvn docker:build -B && echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && mvn docker:push -B; fi
